--- a/src/js/views/viewStylesheets/EIForm.module.css
+++ b/src/js/views/viewStylesheets/EIForm.module.css
@@ -69,6 +69,8 @@
     align-items:flex-start;
     justify-content:left;
     width:100%;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .evaluatorSelect{
@@ -88,3 +90,28 @@ textarea{
     width: 100%;
     resize: none;
 }
+
+.buttons{
+    display: flex;
+    margin-left:75%
+    }
+
+    .submitButton{
+        padding-right: 25px;
+        padding-top: 20px;
+    }
+    
+    .resetButton{
+        padding-right: 25px;
+        padding-top: 20px;
+    }
+
+    .sideBySideDropdowns{
+        height: 50%;
+        width: 100%;
+        display:flex;
+        /* align-items:flex-start; */
+        /* justify-content:center; */
+        border-bottom: 1px solid #a9a9a9;
+        margin:auto;
+    }
