--- a/src/js/views/viewStylesheets/EIForm.module.css
+++ b/src/js/views/viewStylesheets/EIForm.module.css
@@ -115,3 +115,7 @@ textarea{
         border-bottom: 1px solid #a9a9a9;
         margin:auto;
     }
+
+    .summaryScores{
+        width: 100%;
+    }
